ide inc id instead of uuid, store frontend states to cookie, add download btn, add pagination
